--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -245,5 +245,7 @@
         <button type="submit" [disabled]="isLoading" class=" mb-4 btn-main  hover:bg-green-800">Register @if(isLoading){
             <i class="ms-2 fas fa-spin fa-spinner"></i>}
         </button>
+        @if(isLoading){
+        <div class="w-full px-3 py-5 font-medium text-white mb-5 text-center  bg-red-600"> Account Already Exists</div>}
     </form>
 </section>
