--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,156 @@
 <section>
+
+    <!-- component -->
+    <div class="flex justify-center items-center">
+        <!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
+
+
+        <div class="lg:flex items-stretch my-4 ">
+            <div class="lg:w-1/2">
+                <div class="sm:flex items-center justify-between xl:gap-x-8 gap-x-6">
+                    <div class="sm:w-1/2 relative">
+                        <div>
+                            <p class="p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12 April
+                                2021
+                            </p>
+                            <div class="absolute bottom-0 left-0 p-6">
+                                <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
+                                <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
+                                <a href="javascript:void(0)"
+                                    class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-black hover:text-gray-200 hover:underline">
+                                    <p class="pr-2 text-sm font-medium leading-none">Read More</p>
+                                    <svg class="fill-stroke" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M5.75 12.5L10.25 8L5.75 3.5" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="/images/grocery-banner.png" class="w-full " alt="chair" />
+                    </div>
+                    <div class="sm:w-1/2 sm:mt-0 mt-4 relative">
+                        <div>
+                            <p class="p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12 April
+                                2021
+                            </p>
+                            <div class="absolute bottom-0 left-0 p-6">
+                                <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
+                                <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
+                                <a href="javascript:void(0)"
+                                    class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-black hover:text-gray-200 hover:underline">
+                                    <p class="pr-2 text-sm font-medium leading-none">Read More</p>
+                                    <svg class="fill-stroke" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M5.75 12.5L10.25 8L5.75 3.5" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="/images/playstation.jpeg" class="w-full" alt="wall design" />
+                    </div>
+                </div>
+                <div class="relative">
+                    <div>
+                        <p class="md:p-10 p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12
+                            April
+                            2021</p>
+                        <div class="absolute bottom-0 left-0 md:p-10 p-6">
+                            <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
+                            <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
+                            <a href="javascript:void(0)"
+                                class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-black hover:text-gray-200 hover:underline">
+                                <p class="pr-2 text-sm font-medium leading-none">Read More</p>
+                                <svg class="fill-stroke" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5.75 12.5L10.25 8L5.75 3.5" stroke="currentColor" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <img src="/images/grocery-banner-2.jpeg" alt="sitting place"
+                        class="w-full mt-8 md:mt-6 hidden sm:block" />
+                    <img class="w-full mt-4 sm:hidden" src="https://i.ibb.co/6XYbN7f/Rectangle-29.png"
+                        alt="sitting place" />
+                </div>
+            </div>
+            <div class="lg:w-1/2 xl:ml-8 lg:ml-4 lg:mt-0 md:mt-6 mt-4 lg:flex flex-col justify-between">
+                <div class="relative">
+                    <div>
+                        <p class="md:p-10 p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12
+                            April
+                            2021</p>
+                        <div class="absolute bottom-0 left-0 md:p-10 p-6">
+                            <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
+                            <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
+                            <a href="javascript:void(0)"
+                                class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-black hover:text-gray-200 hover:underline">
+                                <p class="pr-2 text-sm font-medium leading-none">Read More</p>
+                                <svg class="fill-stroke" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5.75 12.5L10.25 8L5.75 3.5" stroke="currentColor" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <img src="/images/slider-image-3.jpeg" alt="sitting place" class="w-full sm:block hidden" />
+                    <img class="w-full sm:hidden" src="https://i.ibb.co/dpXStJk/Rectangle-29.png" alt="sitting place" />
+                </div>
+                <div class="sm:flex items-center justify-between xl:gap-x-8 gap-x-6 md:mt-6 mt-4">
+                    <div class="relative w-full">
+                        <div>
+                            <p class="p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12 April
+                                2021
+                            </p>
+                            <div class="absolute bottom-0 left-0 p-6">
+                                <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
+                                <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
+                                <a href="javascript:void(0)"
+                                    class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-black hover:text-gray-200 hover:underline">
+                                    <p class="pr-2 text-sm font-medium leading-none">Read More</p>
+                                    <svg class="fill-stroke" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M5.75 12.5L10.25 8L5.75 3.5" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="/images/slider-image-2.jpeg" class="w-full" alt="chair" />
+                    </div>
+                    <div class="relative w-full sm:mt-0 mt-4">
+                        <div>
+                            <p class="p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12 April
+                                2021
+                            </p>
+                            <div class="absolute bottom-0 left-0 p-6">
+                                <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
+                                <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
+                                <a href="javascript:void(0)"
+                                    class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-black hover:text-gray-200 hover:underline">
+                                    <p class="pr-2 text-sm font-medium leading-none">Read More</p>
+                                    <svg class="fill-stroke" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M5.75 12.5L10.25 8L5.75 3.5" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="/images/slider-image-1.jpeg" class="w-full" alt="wall design" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</section>
+<section>
     <div class=" grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-10">
         @for (prod of products; track $index) {
         <div class="card overflow-hidden border border-green-400/200 rounded-md relative ">
