--- a/src/app/Layouts/auth-layaout/auth-layaout.component.html
+++ b/src/app/Layouts/auth-layaout/auth-layaout.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col justify-between min-h-screen">
+<div class="flex flex-col justify-between pt-[68px] ">
     <app-navbar [isLogin]="false"></app-navbar>
-    <div class="container  pt-20 py-8 w-11/12">
+    <div class="container   ">
         <router-outlet></router-outlet>
     </div>
     <app-footer></app-footer>
