--- a/src/app/Layouts/blank-layout/blank-layout.component.html
+++ b/src/app/Layouts/blank-layout/blank-layout.component.html
@@ -1,6 +1,8 @@
-<app-navbar [isLogin]="true"></app-navbar>
+<div class="flex flex-col justify-between min-h-screen">
+    <app-navbar [isLogin]="true"></app-navbar>
 
-<div class="container mt-16 w-11/12 py-8">
-    <router-outlet></router-outlet>
+    <div class="container mt-16 w-11/12 py-8">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
