--- a/src/app/Layouts/footer/footer.component.html
+++ b/src/app/Layouts/footer/footer.component.html
@@ -15,8 +15,8 @@
         <hr />
 
         <!-- footer payment Details Design  -->
-        <div class="pay-details  flex max-sm:flex-col    justify-between items-center mt-3   ">
-            <div class="flex  max-sm:flex-col   items-center gap-2 ">
+        <div class="pay-details  flex max-md:flex-col    justify-between items-center mt-3   ">
+            <div class="flex  max-lg:flex-col   items-center gap-2 ">
                 <h3 class="text-xl font-bold my-2">Payment partners</h3>
                 <div class="w-[100%] flex justify-between">
                     <img class="w-[60px]" src="/images/amazon-pay.png" alt="" />
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-            <div class="flex  max-sm:flex-col items-center gap-2">
+            <div class="flex  max-lg:flex-col items-center gap-2">
                 <h3 class="font-bold  text-xl my-2">Get Deliveries with FreshCart</h3>
                 <div class="flex">
                     <img src="/images/get-google-play.png" width="100px" alt="" />
