--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,1 +1,101 @@
-<p>details works!</p>
+<div class=" p-4">
+
+
+
+
+
+    <div class="xl:max-w-screen-xl lg:max-w-screen-lg max-w-xl mx-auto">
+        <div class="grid items-start grid-cols-1 lg:grid-cols-3 gap-8 max-lg:gap-12 max-sm:gap-8">
+
+            <div class="w-(100%) me-auto">
+                <img [src]="detailData.imageCover" alt="Product" class=" " />
+            </div>
+
+
+
+
+
+
+
+            <div class="w-full lg:col-span-2">
+                <div>
+                    <h3 class="text-lg font-bold text-gray-800">{{detailData.category.name}}</h3>
+                    <div class="flex items-center space-x-1 mt-2">
+
+                        @for (item of detailData.images; track $index) {
+
+                        <svg class="w-4 h-4 fill-yellow-400" viewBox="0 0 14 13" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M7 0L9.4687 3.60213L13.6574 4.83688L10.9944 8.29787L11.1145 12.6631L7 11.2L2.8855 12.6631L3.00556 8.29787L0.342604 4.83688L4.5313 3.60213L7 0Z" />
+                        </svg>
+
+                        }
+
+
+                        <p class="text-sm text-gray-800 !ml-3">{{detailData.ratingsAverage }}
+                            ({{detailData.ratingsQuantity}})</p>
+                    </div>
+                    <div class="flex items-center flex-wrap gap-4 mt-6">
+                        <h4 class="text-gray-800 text-2xl font-bold">{{ detailData.price | currency }}</h4>
+                        <p class="text-gray-500 text-lg"><span class="text-sm ml-1.5">{{detailData.description}}</span>
+                        </p>
+                    </div>
+                </div>
+
+                <hr class="my-6 border-gray-300" />
+
+                <div>
+
+
+                    <div class="mt-6">
+                        <h3 class="text-lg font-bold text-gray-800">Colors</h3>
+                        <div class="flex flex-wrap gap-4 mt-4">
+                            <button type="button"
+                                class="w-10 h-9 bg-gray-600 border border-transparent hover:border-green-600 text-gray-800 text-sm flex items-center justify-center shrink-0"></button>
+                            <button type="button"
+                                class="w-10 h-9 bg-black border border-green-600 hover:border-green-600 text-green-800 text-sm flex items-center justify-center shrink-0"></button>
+                            <button type="button"
+                                class="w-10 h-9 bg-gray-100 border border-transparent hover:border-green-600 text-gray-800 text-sm flex items-center justify-center shrink-0"></button>
+                            <button type="button"
+                                class="w-10 h-9 bg-green-600 border border-transparent hover:border-green-600 text-gray-800 text-sm flex items-center justify-center shrink-0"></button>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class="my-6 border-gray-300" />
+
+                <div class="mt-6 flex flex-wrap gap-4">
+                    <button type="button"
+                        class="px-4 py-3 w-[45%] border border-gray-300 bg-gray-100 hover:bg-gray-200 text-gray-800 text-sm font-semibold  ">Add
+                        to wishlist</button>
+                    <button type="button"
+                        class="px-4 py-3 w-[45%] border border-green-600 bg-green-600 hover:bg-green-700 text-white text-sm font-semibold  ">Add
+                        to cart</button>
+
+                    <div class="flex flex-wrap text-center">
+
+                        @for (item of detailData.images; track $index) {
+
+
+
+                        <img [src]="item" alt="Product1"
+                            class=" border m-1 max-sm:w-full  sm:w-1/2 md:w-2/12   cursor-pointer " />
+
+
+
+                        }
+
+                    </div>
+                </div>
+
+                <hr class="my-6 border-gray-300" />
+
+
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
