--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="border relative py-6  px-10 rounded-md max-sm-w-8/12 bg-gray-50 shadow-sm  mx-auto">
+<section class="border relative my-10  px-10 rounded-md max-sm:w-11/12 sm:w-8/12 bg-gray-50 shadow-sm  mx-auto">
 
     <div [class.hidden]="isload" class="  w-[100%] h-[100%] flex   justify-center items-center   z-20">
         <span class="loader"></span>
@@ -83,10 +83,14 @@
         </div>
 
 
-        <button type="submit" [disabled]="isLoading" class=" mb-4 btn-main  hover:bg-green-800">Login
+        <button type="submit" [disabled]="isLoading" class="  my-3 btn-main  hover:bg-green-800">Login
             @if(isLoading){
             <i class="ms-2 fas fa-spin fa-spinner"></i>}
         </button>
+
+
+        <p class="mb-2 capitalize">If You not have account yet click to <a routerLink="/register"
+                class=" cursor-pointer text-green-600">sign Up now?</a></p>
     </form>
 
 
