--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -1,1 +1,3 @@
-<p>notfound works!</p>
+<div class=" bg-gray-50">
+    <img src="/images/notfound.jpg" class="mx-auto max-h-screen" alt="notfound">
+</div>
