complet payment services

--- a/src/app/Layouts/auth-layaout/auth-layaout.component.html
+++ b/src/app/Layouts/auth-layaout/auth-layaout.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-between pt-[68px] ">
+<div class="flex flex-col justify-between pt-[68px] min-h-screen ">
     <app-navbar [isLogin]="false"></app-navbar>
     <div class="container   ">
         <router-outlet></router-outlet>
