--- a/src/app/Layouts/navbar/navbar.component.html
+++ b/src/app/Layouts/navbar/navbar.component.html
@@ -18,10 +18,7 @@
                     <a routerLink="/products" routerLinkActive="text-white bg-green-800  "
                         class="block transition-all duration-500 hover:bg-green-800 hover:text-white  text-gray-900 rounded  px-3 py-2     dark:text-gray-50  dark:hover:bg-gray-700   ">Product</a>
                 </li>
-                <li>
-                    <a routerLink="/cart" routerLinkActive="text-white bg-green-800 "
-                        class="block transition-all duration-500 hover:bg-green-800 hover:text-white  text-gray-900 rounded  px-3 py-2   dark:text-gray-50  dark:hover:bg-gray-700   ">Cart</a>
-                </li>
+
                 <li>
                     <a routerLink="/categories" routerLinkActive="text-white bg-green-800 "
                         class="block transition-all duration-500 hover:bg-green-800 hover:text-white text-gray-900 rounded  px-3 py-2   dark:text-gray-50  dark:hover:bg-gray-700   ">Categories</a>
@@ -47,9 +44,11 @@
                 <a href=""><i class=" dark:text-blue-400 text-blue-700 fa-brands fa-linkedin"></i></a>
                 <a href=""><i class="dark:text-red-500  text-red-700 fa-brands fa-instagram"></i></a>
                 <a href=""><i class=" dark:text-white  text-black fa-brands fa-tiktok"></i></a>
+
+
             </div>
 
-            <div class="flex mx-2 ">
+            <div class="items-center flex mx-2 ">
 
                 @if(!isLogin()){
 
@@ -61,9 +60,13 @@
                 </a>
                 }
                 @else {
-
+                <li class=" me-2 list-none">
+                    <a routerLink="/cart" routerLinkActive="text-green-800 "
+                        class="block transition-all duration-500  hover:text-green-600  text-gray-900 rounded  px-3 py-2   dark:text-gray-50  dark:hover:bg-gray-700  "><i
+                            class=" text-2xl fas fa-cart-shopping"></i></a>
+                </li>
                 <a role="button" (click)="authService.logoutUser()"
-                    class="bg-gray-500 px-3 text-white mas-sm:px-1 max-sm:py-1 py-2 my-2  rounded hover:bg-red-600   dark:text-white transition-all duration-300 hover:text-green-950   ">LogOut</a>
+                    class="bg-gray-500 px-3 text-white mas-sm:px-1 max-sm:py-1 py-2  m-2  rounded hover:bg-red-600   dark:text-white transition-all duration-300 hover:text-green-950   ">LogOut</a>
                 }
             </div>
 
