--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,1 +1,127 @@
-<p>cart works!</p>
+@if(cartData){
+<section class="mt-5   ">
+    <!-- 
+        <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                    <tr>
+                        <th scope="col" class="px-16 py-3">
+                            <span class="sr-only">Image</span>
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Product
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Qty
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Price
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Action
+                        </th>
+                    </tr>
+                </thead>
+    
+                @for (product of cartData.products ; track $index) {
+    
+                <tbody>
+                    <tr
+                        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <td class="p-4">
+                            <img [src]="product.product.imageCover" class="w-16 md:w-32 max-w-full max-h-full"
+                                [alt]="product.product.title">
+                        </td>
+                        <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
+                            {{product.product.title}}
+                        </td>
+                        <td class="px-6 py-4">
+                            <div class="flex items-center">
+                                <button (click)="product.count+1"
+                                    class="inline-flex items-center justify-center p-1 me-3 text-sm font-medium h-6 w-6 text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
+                                    type="button">
+                                    <span class="sr-only">Quantity button</span>
+                                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                        viewBox="0 0 18 2">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                            stroke-width="2" d="M1 1h16" />
+                                    </svg>
+                                </button>
+                                <div>
+                                    <input type="number" id="first_product"
+                                        class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                        [value]="product.count" required />
+                                </div>
+                                <button (click)="product.count+1"
+                                    class="inline-flex items-center justify-center h-6 w-6 p-1 ms-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
+                                    type="button">
+                                    <span class="sr-only">Quantity button</span>
+                                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                        viewBox="0 0 18 18">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                            stroke-width="2" d="M9 1v16M1 9h16" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </td>
+                        <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
+                            {{product.price |currency :'GBP'}}
+                        </td>
+                        <td class="px-6 py-4">
+                            <a (click)="removeProduct()"
+                                class="font-medium text-red-600 dark:text-red-500 hover:underline">Remove</a>
+                        </td>
+                    </tr>
+    
+                </tbody>
+    
+    
+    
+    
+                }
+    
+    
+            </table>
+        </div> -->
+    <div class="products-in-cart   shadow  pb-3 px-2   text-white bg-blue-50">
+        <h1 class=" text-center pt-6 text-4xl text-green-600  font-medium">Shop Cart</h1>
+        <h3 class=" text-2xl text-center my-2 font-medium text-green-600">Total Card Price :{{cartData.totalCartPrice
+            |currency:"GBP"}}</h3>
+
+        <button class="btn-main capitalize my-4 mx-auto block hover:bg-red-600 duration-500 "
+            [routerLink]="['/checkout',cartData._id]">
+            CheckOut
+        </button>
+        <button class="btn-main capitalize my-4 mx-auto block hover:bg-red-600 duration-500 " (click)="deleteCart()">
+            clear cart
+        </button>
+        @for (prod of cartData.products; track $index) {
+        <div class="grid   mb-1 border-b-[1px]   grid-cols-[10%_minmax(0,1fr)] ">
+            <div>
+                <img [src]="prod.product.imageCover" class=" h-[100px] w-full object-contain"
+                    [alt]="prod.product.title">
+            </div>
+            <div class=" flex justify-between items-center">
+                <div>
+                    <h3 class=" text-gray-900"> {{prod.product.title}}</h3>
+                    <span class="text-lg  text-green-700"> price : {{prod.price |currency :'EUR'}} </span>
+                </div>
+                <div class="items-center  flex  gap-2  ">
+                    <div class="mx-3 items-center gap-2   flex ">
+                        <button (click)="updateCartProductQuantity(prod.product._id,prod.count+1)"> <i
+                                class=" text-2xl text-green-700 fa fa-plus-square"></i> </button>
+                        <span class="text-black"> {{prod.count}} </span>
+                        <button (click)="updateCartProductQuantity(prod.product._id,prod.count-1)"> <i
+                                class=" text-2xl text-green-700 fa fa-minus-square"></i> </button>
+                    </div>
+                    <button (click)="removeProduct(prod.product._id)"
+                        class="  block border mx-2 px-4 py-2 hover:bg-red-500 duration-500 bg-red-700 rounded text-white">
+                        <i class="fas fa  fa-trash-can"></i>
+                        Remove</button>
+                </div>
+            </div>
+        </div>
+        }
+    </div>
+</section>
+}
