--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,40 +1,31 @@
+@if( detailData){
 <div class=" p-4">
-
-
-
-
-
     <div class="xl:max-w-screen-xl lg:max-w-screen-lg max-w-xl mx-auto">
         <div class="grid items-start grid-cols-1 lg:grid-cols-3 gap-8 max-lg:gap-12 max-sm:gap-8">
-
             <div class="w-(100%) me-auto">
                 <img [src]="detailData.imageCover" alt="Product" class=" " />
             </div>
-
-
-
-
-
-
-
             <div class="w-full lg:col-span-2">
                 <div>
-                    <h3 class="text-lg font-bold text-gray-800">{{detailData.category.name}}</h3>
-                    <div class="flex items-center space-x-1 mt-2">
-
-                        @for (item of detailData.images; track $index) {
-
-                        <svg class="w-4 h-4 fill-yellow-400" viewBox="0 0 14 13" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M7 0L9.4687 3.60213L13.6574 4.83688L10.9944 8.29787L11.1145 12.6631L7 11.2L2.8855 12.6631L3.00556 8.29787L0.342604 4.83688L4.5313 3.60213L7 0Z" />
-                        </svg>
-
-                        }
+                    <h3 class="text-lg font-bold text-gray-800">{{detailData.title}}</h3>
+                    <div class="flex justify-between px-2">
+                        <h4 class="text-lg font-bold text-gray-600">{{detailData.category.name}}</h4>
+                        <div class="flex items-center space-x-1 mt-2">
 
 
-                        <p class="text-sm text-gray-800 !ml-3">{{detailData.ratingsAverage }}
-                            ({{detailData.ratingsQuantity}})</p>
+                            @for (item of detailData.images; track $index) {
+
+                            <svg class="w-4 h-4 fill-yellow-400" viewBox="0 0 14 13" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M7 0L9.4687 3.60213L13.6574 4.83688L10.9944 8.29787L11.1145 12.6631L7 11.2L2.8855 12.6631L3.00556 8.29787L0.342604 4.83688L4.5313 3.60213L7 0Z" />
+                            </svg>
+
+                            }
+                            <p class="text-sm text-gray-800 !ml-3">{{detailData.ratingsAverage }}
+                                ({{detailData.ratingsQuantity}})</p>
+                        </div>
+
                     </div>
                     <div class="flex items-center flex-wrap gap-4 mt-6">
                         <h4 class="text-gray-800 text-2xl font-bold">{{ detailData.price | currency }}</h4>
@@ -58,7 +49,7 @@
                             <button type="button"
                                 class="w-10 h-9 bg-gray-100 border border-transparent hover:border-green-600 text-gray-800 text-sm flex items-center justify-center shrink-0"></button>
                             <button type="button"
-                                class="w-10 h-9 bg-green-600 border border-transparent hover:border-green-600 text-gray-800 text-sm flex items-center justify-center shrink-0"></button>
+                                class="w-10 h-9 bg-blue-600 border border-transparent hover:border-green-600 text-gray-800 text-sm flex items-center justify-center shrink-0"></button>
                         </div>
                     </div>
                 </div>
@@ -99,3 +90,4 @@
 
 
 </div>
+}
