add loading interceptor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <router-outlet></router-outlet>
+<ngx-spinner class="text-green-600 bg-slate-100  text-5xl " type="ball-scale-multiple">
+    <img src="/images/freshcart-logo.svg" class=" w-[300px] h-[100px] mt-10 " alt="logo loading">
+    <!-- <p class="text-green-600  text-3xl">Loading...</p> -->
+</ngx-spinner>
