--- a/src/app/pages/brands/brands.component.html
+++ b/src/app/pages/brands/brands.component.html
@@ -1,1 +1,37 @@
-<p>brands works!</p>
+<div class="mt-5 border-gray-950  border-y-2   py-2 ">
+    <owl-carousel-o class="" [options]="customOptions">
+        @for (brand of brandData; track $index) {
+        <ng-template carouselSlide>
+            <div class="cursor-pointer px-3 py-2   border border-black   ">
+
+
+                <img [src]="brand.image" class="" [alt]="brand.slug">
+
+
+                <p class="text-center font-serif pt-1 text-green-500"> {{brand.name}} </p>
+            </div>
+        </ng-template>
+        }
+    </owl-carousel-o>
+</div>
+
+
+<h1 class=" my-6  text-4xl font-bold  text-center text-green-700">Our Brands</h1>
+<div class="grid max-sm:grid-cols-2 sm:grid-cols-3  md:grid-cols-4 lg:grid-cols-5    gap-3 my-2 ">
+    @for (item of brandData; track $index) {
+
+    <div>
+        <div class="group  relative overflow-hidden   border rounded-md border-green-600">
+            <img [src]="item.image" class=" group-hover:scale-110   duration-500 w-full" alt="">
+            <div class="absolute top-0 bottom-0 w-full flex justify-center items-end  duration-500  group-hover:bg-green-600  group-hover:bg-opacity-20
+             bg-green-500 bg-opacity-20">
+                <p class=" group-hover:text-green-600 duration-500  text-green-950  text-lg font-bold"> {{item.name}}
+                </p>
+            </div>
+
+        </div>
+
+    </div>
+    }
+
+</div>
