Edite in Design of Some Components and edit in add and remove from wishlist

--- a/src/app/Layouts/auth-layaout/auth-layaout.component.html
+++ b/src/app/Layouts/auth-layaout/auth-layaout.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-between pt-[68px] min-h-screen ">
+<div class="flex flex-col justify-between pt-[68px] min-h-screen  dark:bg-slate-800 dark:text-white   ">
     <app-navbar [isLogin]="false"></app-navbar>
     <div class="container   ">
         <router-outlet></router-outlet>
