--- a/src/app/Layouts/footer/footer.component.html
+++ b/src/app/Layouts/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-zinc-100 py-6">
+<footer class="bg-zinc-100 py-6 mt-2  dark:bg-slate-900 dark:text-white   ">
     <div class="container w-[95%] mx-auto">
         <h2 class="mb-3 font-light text-4xl ">Get The Fresh Cart App</h2>
         <p class="font-light text-l text-gray-500 small">
