--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,10 +1,5 @@
 <section>
-
-    <!-- component -->
     <div class="flex justify-center items-center">
-        <!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
-
-
         <div class="lg:flex items-stretch my-4 ">
             <div class="lg:w-1/2">
                 <div class="sm:flex items-center justify-between xl:gap-x-8 gap-x-6">
@@ -13,7 +8,7 @@
                             <p class="p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12 April
                                 2021
                             </p>
-                            <div class="absolute bottom-0 left-0 p-6">
+                            <div class="absolute bottom-0 left-0 p-3">
                                 <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
                                 <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
                                 <a href="javascript:void(0)"
@@ -34,7 +29,7 @@
                             <p class="p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12 April
                                 2021
                             </p>
-                            <div class="absolute bottom-0 left-0 p-6">
+                            <div class="absolute bottom-0 left-0 p-3">
                                 <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
                                 <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
                                 <a href="javascript:void(0)"
@@ -53,7 +48,7 @@
                 </div>
                 <div class="relative">
                     <div>
-                        <p class="md:p-10 p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12
+                        <p class="md:p-10 p-3 text-xs font-medium leading-3 text-black absolute top-0 right-0">12
                             April
                             2021</p>
                         <div class="absolute bottom-0 left-0 md:p-10 p-6">
@@ -82,7 +77,7 @@
                         <p class="md:p-10 p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12
                             April
                             2021</p>
-                        <div class="absolute bottom-0 left-0 md:p-10 p-6">
+                        <div class="absolute bottom-0 left-0 md:p-10 p-3">
                             <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
                             <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
                             <a href="javascript:void(0)"
@@ -126,7 +121,7 @@
                             <p class="p-6 text-xs font-medium leading-3 text-black absolute top-0 right-0">12 April
                                 2021
                             </p>
-                            <div class="absolute bottom-0 left-0 p-6">
+                            <div class="absolute bottom-0 left-0 p-3">
                                 <h2 class="text-xl font-semibold 5 text-black">The Decorated Ways</h2>
                                 <p class="text-base leading-4 text-black mt-2">Dive into minimalism</p>
                                 <a href="javascript:void(0)"
@@ -151,25 +146,83 @@
 
 </section>
 <section>
-    <div class=" grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-10">
+    <div class="text-green-500 text-4xl text-center capitalize my-3">products</div>
+    <div class=" grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4  xl:grid-cols-5 gap-10">
+
+
+
         @for (prod of products; track $index) {
-        <div class="card overflow-hidden border border-green-400/200 rounded-md relative ">
+        <div class="card  cursor-pointer  overflow-hidden border border-green-400/200 rounded  relative ">
             <div class="card-image ">
                 <img class="card-img-top h-[250px] object-contain w-full " [src]="prod.imageCover" [alt]="prod.title" />
 
             </div>
-            <div class="card-body pt-3 px-2">
+            <div [routerLink]="['/details' ,prod._id]" class=" cursor-pointer card-body pt-3 px-2 flex flex-col ">
                 <h4 class="text-green-600 text-center text-sm">{{prod.category.name}}</h4>
-                <h3 class="card-title font-medium mb-2">{{prod.title.split(" ",3).join(" ")}}</h3>
+                <h3 class="card-title font-medium mb-2">{{prod.title.split(" ",2).join(" ")}}</h3>
                 <p class="card-text ">Brand: {{prod.brand.name}}</p>
-                <div class="flex justify-between my-2  items-center ">
-                    <span class="font-medium">price: {{prod.price}}: EGP </span>
-                    <div class=" flex items-center"><i class="pe-2 fa-solid fa-star text-yellow-400"></i><span
-                            class="text-gray-500"> {{prod.ratingsAverage}} </span></div>
+
+
+                <div class="flex items-center justify-end ">
+                    @for(star of [1,2,3,4,5].slice(0,prod.ratingsAverage) ;track $index){
+                    <i class=" fa-solid fa-star text-yellow-400"></i>
+                    }
+                    @if(
+                    prod.ratingsAverage %1 !==0
+                    ){
+                    <i class=" fa-solid fa-star-half-alt text-yellow-400"></i>
+                    }
+                    <span class="text-gray-500">({{prod.ratingsAverage}})</span>
                 </div>
 
             </div>
-            <button class="py-3 bg-green-800 text-white block w-[90%] mx-auto rounded">Add To Cart</button>
+            <div class="flex justify-between my-2 px-2 items-start relative ">
+                <span class="font-bold ">price : {{prod.price}} EGP </span>
+
+                <i (click)="addProductToWishlist(prod._id) "
+                    class=" absolute top-0 end-3 z-20  cursor-pointer text-lg  text-red-600  fa-regular fa-heart"></i>
+                @for (data of wishData; track $index) {
+                @if(wishData !== null){
+                @if( data._id == prod._id ){
+                <i (click)="RemoveProductFromWishlist(prod._id) "
+                    class=" absolute top-0 end-3 z-[21]  cursor-pointer text-lg  text-red-600  fa-solid fa-heart"></i>
+                }
+                @if(data._id !== prod._id){
+                <i (click)="addProductToWishlist(prod._id) "
+                    class=" absolute top-0 end-3 z-20  cursor-pointer text-lg  text-red-600  fa-regular fa-heart"></i>
+                }
+                }
+                }
+
+
+
+                <!-- 
+
+                <i (click)="addProductToWishList(prod._id) "
+                    class=" absolute top-0 end-3 z-20  cursor-pointer text-lg  text-red-600  fa-regular fa-heart"></i>
+                @if(wishData !== null){
+                @for (data of wishData; track $index) {
+
+                @if( data._id == prod._id ){
+
+                <i (click)="removProductFromWishlist(prod._id) "
+                    class=" absolute top-0 end-3 z-[21]  cursor-pointer text-lg  text-red-600  fa-solid fa-heart"></i>
+                }
+
+                @if(data._id !== prod._id){
+                <i (click)="addProductToWishList(prod._id) "
+                    class=" absolute top-0 end-3 z-20  cursor-pointer text-lg  text-red-600  fa-regular fa-heart"></i>
+                }
+
+                }
+                } -->
+
+
+
+
+            </div>
+            <button (click)="addToCart(prod._id)" class="py-3 bg-green-800 text-white block w-[90%] mx-auto rounded">Add
+                To Cart</button>
         </div>
         }
 
