--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,10 +1,11 @@
-<section class="border    max-sm:mt-2 my-5 px-10 rounded-md sm:w-8/12 bg-gray-50 shadow-sm  mx-auto">
+<section
+    class="border    max-sm:mt-2 my-1 px-10 rounded-md sm:w-8/12 dark:bg-gray-900 border-green-400  bg-gray-50 shadow-sm  mx-auto">
     @let nameControl= registerForm.get('name');
     @let emailControl= registerForm.get('email');
     @let passwordControl= registerForm.get('password');
 
     @let phoneControl= registerForm.get('phone');
-    <h1 class="my-2 text-3xl text-center font-sans  text-green-800"><i>Register NOW</i></h1>
+    <h1 class="my-2 text-3xl text-center font-sans  text-green-500"><i>Register NOW</i></h1>
     <form [formGroup]="registerForm" (ngSubmit)="submitForm()">
 
         <div class="mb-2">
