--- a/src/app/pages/spicificCatDetails/spicific-cat-details/spicific-cat-details.component.html
+++ b/src/app/pages/spicificCatDetails/spicific-cat-details/spicific-cat-details.component.html
@@ -1,16 +1,84 @@
+@if(productData && categoryDataDetail){
+
+
 <div class=" p-4">
 
 
 
-    <div class="flex flex-col items-center   my-6 text-center">
-        <h3 class="text-lg font-bold text-gray-800">{{categoryDataDetail.name}}</h3>
-        <p class="text-gray-500 text-lg"><span class="text-sm ml-1.5">{{categoryDataDetail.updatedAt |
-                date}}</span>
-        </p>
-        <img [src]="categoryDataDetail.image" alt="Product" class=" w-[25%]" />
+
+
+    @if(productData){
+
+
+    <div class=" grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 overflow-hidden gap-5">
+        <div class="flex flex-col items-center   my-2 text-center">
+            <h3 class="text-lg font-bold text-gray-800">{{categoryDataDetail.name}}</h3>
+            <p class="text-gray-500 text-lg"><span class="text-sm ml-1.5">{{categoryDataDetail.updatedAt |
+                    date}}</span>
+            </p>
+            <img [src]="categoryDataDetail.image" alt="Product" class=" w-full" />
+        </div>
+        @for (prod of productData ; track prod._id) {
+        @if( prod.category._id === categoryDataDetail._id){
+        <div class="card group overflow-hidden border border-green-300 rounded-md relative ">
+            <div class="card-image ">
+                <img [src]=" prod.imageCover" class="card-img-top  h-[250px] w-full" [alt]="prod.title">
+            </div>
+            <div [routerLink]="['/details',prod._id]">
+
+                <div class="card-body  px-2">
+                    <h4 class="text-green-600 py-1 text-center text-sm">{{prod.category.name}}</h4>
+                    <h3 class="card-title font-medium mb-1">{{prod.title.split(" ",2).join(" ")}}</h3>
+                    <p class="card-text ">Brand: {{prod.brand.name}}</p>
+
+
+                </div>
+
+            </div>
+            <div class="flex justify-between mx-2  items-center ">
+                <span class="font-medium ">{{ prod.price}} EGP </span>
+
+
+
+
+
+
+            </div>
+            <div class=" flex items-center justify-between mx-3 mb-1">
+                <i #el appChangerheart (click)="(addProductToWishList(prod._id) )"
+                    class="cursor-pointer text-red-600   fa-regular fa-heart"></i>
+
+
+                <div>
+                    @for (star of [1,2,3,4,5].slice(0, prod.ratingsAverage); track $index) {
+                    <i class=" fa-solid fa-star text-yellow-400"></i>
+                    }
+                    @if (prod.ratingsAverage % 1 !== 0) {
+                    <span><i class="fa-solid fa-star-half text-yellow-500 "></i></span>
+                    }
+
+                    <span class="ms-1 text-gray-500">
+                        ({{prod.ratingsAverage}} )</span>
+                </div>
+            </div>
+            <button (click)=" addItemToCart(prod._id) "
+                class=" translate-y-[100%] group-hover:translate-y-0 duration-700 opacity-0 group-hover:opacity-100 transition-all  py-2 bg-green-800 text-white block w-[90%] mx-auto rounded">Add
+                To Cart</button>
+        </div>
+        }
+
+        }
+
+
+
+
+
     </div>
 
 
+    }
 
 
 </div>
+
+}
