--- a/src/app/pages/spicificCatDetails/spicific-cat-details/spicific-cat-details.component.html
+++ b/src/app/pages/spicificCatDetails/spicific-cat-details/spicific-cat-details.component.html
@@ -12,8 +12,8 @@
 
     <div class=" grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 overflow-hidden gap-5">
         <div class="flex flex-col items-center   my-2 text-center">
-            <h3 class="text-lg font-bold text-gray-800">{{categoryDataDetail.name}}</h3>
-            <p class="text-gray-500 text-lg"><span class="text-sm ml-1.5">{{categoryDataDetail.updatedAt |
+            <h3 class="text-xl font-bold dark:text-white text-gray-800">{{categoryDataDetail.name}}</h3>
+            <p class="text-gray-500 text-lg"><span class="text-lg ml-1.5">{{categoryDataDetail.updatedAt |
                     date}}</span>
             </p>
             <img [src]="categoryDataDetail.image" alt="Product" class=" w-full" />
@@ -21,12 +21,12 @@
         @for (prod of productData ; track prod._id) {
         @if( prod.category._id === categoryDataDetail._id){
         <div class="card group overflow-hidden border border-green-300 rounded-md relative ">
-            <div class="card-image ">
+            <div [routerLink]="['/details',prod._id]" class="cursor-pointer card-image ">
                 <img [src]=" prod.imageCover" class="card-img-top  h-[250px] w-full" [alt]="prod.title">
             </div>
             <div [routerLink]="['/details',prod._id]">
 
-                <div class="card-body  px-2">
+                <div class="cursor-pointer card-body  px-2">
                     <h4 class="text-green-600 py-1 text-center text-sm">{{prod.category.name}}</h4>
                     <h3 class="card-title font-medium mb-1">{{prod.title.split(" ",2).join(" ")}}</h3>
                     <p class="card-text ">Brand: {{prod.brand.name}}</p>
@@ -45,7 +45,7 @@
 
             </div>
             <div class=" flex items-center justify-between mx-3 mb-1">
-                <i #el appChangerheart (click)="(addProductToWishList(prod._id) )"
+                <i appChangerheart (click)="(addProductToWishList(prod._id) )"
                     class="cursor-pointer text-red-600   fa-regular fa-heart"></i>
 
 
